--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -36,7 +36,7 @@ ul#countdown li span {
   color: red ;
   height: 80px;
   line-height: 1.5em;
-  position: relative;
+  position: absolute;
 }
 ul#countdown li span::before {
   content: '';
