--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -9,7 +9,7 @@
 **********************************************************************************/
 
 .timer-area {
-  width: 350px;
+  width: 70%;
   background: #8bbd13;
   text-align: center;
   padding-top: 0.5em;
