--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -9,8 +9,8 @@
 **********************************************************************************/
 
 .timer-area {
-  width: 80%;
-  background: #8bbd13;
+  width: 85%;
+  background: #b7d2ff;
   text-align: center;
   padding-top: 0.5em;
   margin-bottom: 0.5em;
