--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -13,6 +13,7 @@
   background: #b7d2ff;
   text-align: left;
   padding-top: 0.5em;
+  margin-left: 0.5em;	
   margin-bottom: 0.5em;
   border: 1px solid black ;
 }
