--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -11,7 +11,7 @@
 .timer-area {
   width: auto;
   background: #b7d2ff;
-  text-align: left;
+  text-align: center;
   padding-top: 0.5em;
   margin-left: 0.5em;	
   margin-bottom: 0.5em;
