--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -29,7 +29,7 @@ ul#countdown li {
   background: transparent url('//kamillu.github.io/Beautiful-jQuery-Countdown-Timer-Plugin/images/timer-piece2.png') no-repeat center top;
   width: 80px;
   margin-bottom: 0.5em;
-  text-align: center;
+  text-align: right;
 }
 ul#countdown li span {
   font-size: 2.4em;
