--- a/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
+++ b/Beautiful-jQuery-Countdown-Timer-Plugin/css/styles.css
@@ -27,9 +27,9 @@
 ul#countdown li {
   display: inline-block;
   background: transparent url('//kamillu.github.io/Beautiful-jQuery-Countdown-Timer-Plugin/images/timer-piece2.png') no-repeat center top;
-  width: 80px;
+  width: 75px;
   margin-bottom: 0.5em;
-  text-align: left;
+  text-align: center;
 }
 ul#countdown li span {
   font-size: 2.4em;
